--- a/package.json
+++ b/package.json
@@ -11,10 +11,10 @@
   },
   "browserslist": {
     "development": [
-    "> 1%",
-    "last 2 versions",
-    "not dead",
-    "not ie 11"
+      "> 1%",
+      "last 2 versions",
+      "not dead",
+      "not ie 11"
     ],
     "production": [
       "> 2% in JP",
@@ -24,13 +24,21 @@
   },
   "dependencies": {
     "@heroicons/react": "^2.0.18",
+    "@radix-ui/react-label": "^2.1.7",
+    "@radix-ui/react-select": "^2.2.5",
+    "clsx": "^2.1.1",
+    "date-fns": "^4.1.0",
+    "decimal.js": "^10.6.0",
     "gsap": "^3.13.0",
+    "lucide-react": "^0.539.0",
     "next": "^13.5",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
+    "react-hook-form": "^7.62.0",
     "react-modal": "^3.16.1",
     "scroll-hint": "^1.2.9",
-    "smooth-scroll": "^16.1.3"
+    "smooth-scroll": "^16.1.3",
+    "zustand": "^5.0.7"
   },
   "devDependencies": {
     "@testing-library/jest-dom": "^6.6.4",
