ファイル整理

--- a/package.json
+++ b/package.json
@@ -8,11 +8,11 @@
     "serve": "npx serve _dist",
     "imgmin": "node imagemin.config.js",
     "eslint": "npx eslint --fix \"pages/**/*.{ts,tsx}\" \"components/**/*.{ts,tsx}\" \"features/**/*.{ts,tsx}\"",
-    "db:setup": "./.claude/tmp/setup-database.sh",
-    "db:migrate": "./.claude/tmp/manage-migrations.sh migrate-local",
-    "db:migrate:prod": "./.claude/tmp/manage-migrations.sh migrate-prod",
-    "db:status": "./.claude/tmp/manage-migrations.sh status-local",
-    "db:reset": "./.claude/tmp/manage-migrations.sh reset-local",
+    "db:setup": "./scripts/setup-database.sh",
+    "db:migrate": "./scripts/manage-migrations.sh migrate-local",
+    "db:migrate:prod": "./scripts/manage-migrations.sh migrate-prod",
+    "db:status": "./scripts/manage-migrations.sh status-local",
+    "db:reset": "./scripts/manage-migrations.sh reset-local",
     "deploy": "npm run build:deploy && wrangler pages deploy _dist",
     "deploy:preview": "npm run build:deploy && wrangler pages deploy _dist --env=preview"
   },
