--- a/package.json
+++ b/package.json
@@ -1,5 +1,7 @@
 {
   "private": true,
+  "⚠️ WARNING": "開発者は必ずdocs/development-critical-rules.mdを読むこと",
+  "🚨 CRITICAL": "推測での報告禁止、開発者ツール確認必須、証拠付き報告必須",
   "scripts": {
     "dev": "next dev",
     "build": "next build",
@@ -53,6 +55,7 @@
     "zustand": "^5.0.7"
   },
   "devDependencies": {
+    "@playwright/test": "^1.54.2",
     "@testing-library/jest-dom": "^6.6.4",
     "@testing-library/react": "^16.3.0",
     "@types/gsap": "^3.0.0",
