--- a/wrangler.toml
+++ b/wrangler.toml
@@ -17,6 +17,7 @@ pages_build_output_dir = "_dist"
 binding = "DB"
 database_name = "satellite-investment-db"
 database_id = "31102c68-1cd7-4696-862f-2a115724f331"  # ローカル開発用
+preview_database_id = "31102c68-1cd7-4696-862f-2a115724f331"  # ローカル開発用
 
 # 本番用D1設定（環境変数で管理）
 [[env.production.d1_databases]]
@@ -63,55 +64,44 @@ LOG_LEVEL = "debug"
 [limits]
 cpu_ms = 50  # CPU実行時間制限（ミリ秒）
 
-# Pages設定
-[pages]
-# カスタムドメイン設定（オプション）
+# Pages設定は削除（Pages Functionsではサポートされていない設定項目のため）
+# [pages]
 # custom_domain = "your-custom-domain.com"
 
-# セキュリティヘッダー
-[[pages.headers]]
-for = "/*"
+# セキュリティヘッダー設定は_headers ファイルで管理
+# [[pages.headers]]
+# for = "/*"
 
-[pages.headers.values]
-X-Frame-Options = "DENY"
-X-Content-Type-Options = "nosniff"
-Referrer-Policy = "strict-origin-when-cross-origin"
-Content-Security-Policy = "default-src 'self'; script-src 'self' 'unsafe-inline' 'unsafe-eval'; style-src 'self' 'unsafe-inline'; img-src 'self' data: https:; font-src 'self' data:; connect-src 'self' https://api.example.com;"
+# [pages.headers.values]
+# X-Frame-Options = "DENY"
+# X-Content-Type-Options = "nosniff"
+# Referrer-Policy = "strict-origin-when-cross-origin"
+# Content-Security-Policy = "default-src 'self'; script-src 'self' 'unsafe-inline' 'unsafe-eval'; style-src 'self' 'unsafe-inline'; img-src 'self' data: https:; font-src 'self' data:; connect-src 'self' https://api.example.com;"
 
-# キャッシュ設定
-[[pages.headers]]
-for = "/api/*"
+# キャッシュ設定も_headers ファイルで管理
+# [[pages.headers]]
+# for = "/api/*"
 
-[pages.headers.values]
-Cache-Control = "no-cache, no-store, must-revalidate"
+# [pages.headers.values]
+# Cache-Control = "no-cache, no-store, must-revalidate"
 
-[[pages.headers]]
-for = "/*.js"
+# [[pages.headers]]
+# for = "/*.js"
 
-[pages.headers.values]
-Cache-Control = "public, max-age=31536000, immutable"
+# [pages.headers.values]
+# Cache-Control = "public, max-age=31536000, immutable"
 
-[[pages.headers]]
-for = "/*.css"
+# [[pages.headers]]
+# for = "/*.css"
 
-[pages.headers.values]
-Cache-Control = "public, max-age=31536000, immutable"
+# [pages.headers.values]
+# Cache-Control = "public, max-age=31536000, immutable"
 
-# リダイレクト設定
-[[pages.redirects]]
-from = "/admin"
-to = "/"
-status = 301
+# リダイレクト設定も_redirects ファイルで管理
+# [[pages.redirects]]
+# from = "/admin"
+# to = "/"
+# status = 301
 
-# Functions設定
-[pages.functions]
-# Functions のディレクトリ（デフォルト: functions/）
-directory = "functions"
-
-# 互換性設定
-[pages.functions.compatibility]
-nodejs_compat = true
-
-# Node.js互換性フラグ
-[pages.functions.compatibility_flags]
-nodejs_compat = true
+# Functions設定（Pages Functions用）
+# functions/ ディレクトリで管理
