--- a/wrangler.toml
+++ b/wrangler.toml
@@ -15,6 +15,12 @@ database_name = "satellite-investment-db"
 database_id = "31102c68-1cd7-4696-862f-2a115724f331"  # ローカル開発用
 preview_database_id = "31102c68-1cd7-4696-862f-2a115724f331"  # ローカル開発用
 
+# プレビュー環境用D1設定
+[[env.preview.d1_databases]]
+binding = "DB"
+database_name = "satellite-investment-db-prod"
+database_id = "a30360f1-cac4-4f36-b3e6-6b3fb52ff1ee"
+
 # 本番用D1設定（環境変数で管理）
 [[env.production.d1_databases]]
 binding = "DB"
